# -crewai-python-template-testing

./: AGENTS.md  Dockerfile  Jenkinsfile  Jenkinsfile.ci  Jenkinsfile.deploy  README.md  pyproject.toml  readme.md
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: deployment.yaml  ingress.yaml  middleware.yaml  tlsstore.yaml  traefik-ingressroute.yaml
src/latest_ai_development/: crew.py  main.py  secrets_manager.py
